@@ -5,45 +5,45 @@
     <div class="profile-content img-rounded">
         <h3>{% trans 'صفحة' %} ال{{ title }}</h3>
 {% if user_profiles %}
-        <div class="row">
-            <div class="table-responsive">
-                <table class="table table-condensed">
-                    {% for profile in user_profiles %}
-                        <tr>
-                            <td class="col-md-1 col-sm-1 col-xs-1">
-                                <img src="{{ profile.gravatar_url }}" width="70" height="70" alt=""
-                                     class="img-circle">
-                            </td>
-                            <td>
-                                <a href="{% url 'user_page' profile.user.username %}">{{ profile.user.get_full_name }}</a>
 
-                                <p>
-                                    <small>{% trans "عدد المتابعين" %}: </small>
-                                    <small class="text-success">{{ profile.followed_by.all.count }}</small>
-                                    -
-                                    <small>{% trans "عدد الاخبار" %}: </small>
-                                    <small class="text-success">{{ profile.user.post_set.all.count }}</small>
-                                </p>
-                            </td>
-                            <td class="col-md-1 col-sm-1 col-xs-1">
-                                {% if profile in user.userprofile.follows.all %}
-                                    <form action="{% url 'unfollow' profile.user.username %}" method="post">{% csrf_token %}
-                                        <button type="submit" class="btn btn-danger btn-sm">{% trans "الغاء المتابعة" %}</button>
-                                        <input type="hidden" name="next" value="{{ next }}" />
-                                    </form>
-                                {% else %}
-                                    <form action="{% url 'follow' profile.user.username %}" method="post">{% csrf_token %}
-                                        <button type="submit" class="btn btn-success btn-sm">{% trans "متابعة" %}</button>
-                                        <input type="hidden" name="next" value="{{ next }}" />
-                                    </form>
-                                {% endif %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </table>
-            </div>
+{% for profile in user_profiles.object_list %}
+<div class="col-lg-6">
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="col-lg-4 col-md-3 col-sm-5 col-xs-5">
+            <img src="{{ profile.gravatar_url }}" alt="" class="img-circle img-responsive">
         </div>
-
+        <div class="col-lg-8 col-md-9 col-sm-7 col-xs-7">
+           <p class="page-header">
+           <a href="{% url 'user_page' profile.user.username %}">{{ profile.user.get_full_name }}</a>
+           </p>
+           <p>
+                <small><i class="glyphicon glyphicon-heart">&nbsp;</i>{% trans "عدد المتابعين" %}: </small>
+                <small class="text-success">{{ profile.followed_by.all.count }}</small>
+            </p>
+            <p>
+                <small><i class="glyphicon glyphicon-list-alt">&nbsp;</i>{% trans "عدد الاخبار" %}: </small>
+                <small class="text-success">{{ profile.user.post_set.all.count }}</small>
+            </p>
+        </div>
+        <div class="pull-left">
+           {% if profile in user.userprofile.follows.all %}
+                <form action="{% url 'unfollow' profile.user.username %}" method="post">{% csrf_token %}
+                    <button type="submit" class="btn btn-danger btn-sm">{% trans "الغاء المتابعة" %}</button>
+                    <input type="hidden" name="next" value="{{ next }}" />
+                </form>
+            {% else %}
+                <form action="{% url 'follow' profile.user.username %}" method="post">{% csrf_token %}
+                    <button type="submit" class="btn btn-success btn-sm">{% trans "متابعة" %}</button>
+                    <input type="hidden" name="next" value="{{ next }}" />
+                </form>
+            {% endif %}
+        </div>
+      
+    </div>            
+</div>
+</div>
+{% endfor %}
 
         <nav>
         <ul class="pager">
